about us medicine sign up login

--- a/frontend/src/Components/LoginPage/Login.css
+++ b/frontend/src/Components/LoginPage/Login.css
@@ -1,34 +1,111 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    padding: 0;
+    margin: 0;
 }
-.body{
+.header{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-top: 10vh;
+    justify-content: space-between;
+    width: 100vw;
+    height: 80px;
+    background-color: #DFF8F8;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    margin: 0;
 }
-.left-area{
-    width:40vw;
-    height:100vh;
-    /* border:3px solid black; */
+.logo{
+    background-image: url("./Images/swaaslogo.png");
+    background-size: cover;
+    height: 75px;
+    width: 150px;
+    margin-left: 1rem ;
 }
-.right-area{
-    margin-left: 2vw;
-    margin-right: 2vw;
-    width:60vw;
-    /* border:3px solid black; */
-    height:100vh;
+.profile-photo{
+    background-image: url("./Images/handplus.png");
+    background-size: cover;
+    height: 80px;
+    width: 80px;
+    margin-right: 3rem;
+}
+body {
+    background: #CAF4F4;
+}
+.loginpic{
+    background-image: url("./Images/loginpic.png");
+    width: 500px;
+height: 550px;
+background-size: cover;
+}
+#loginpage {
+    display: inline;
+   
+    height: 680px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+h1 {
+    background: linear-gradient(90deg, #4499BF 0.34%, #106029 142.21%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+#lgin {
+    padding-top: 50px;
+    text-align: center;
+    border-radius: 20px;
+    background: #8BE7E7;
+    height: 550px;
+    width: 500px
     
-
 }
-
-hr {
-    width:70%;
-    margin:0 auto;
+.logintext {
+    background: #CAF4F4;
+    border-radius: 20px;
+    height: 30px;
+    width: 350px;
+    font-size: large;
+    padding-left: 20px;
+    margin-left: 75px;
 }
-
-.Name{
-    display: flex;
-    flex-direction: row;
- }
+#forgotp {
+    color: #01237C;
+    font-family: Inter;
+   margin-top: 30px;
+}
+a {
+    text-decoration: none;
+}
+/* #loginbox {
+    font-size: x-large;
+} */
+#loginbutton {
+    background: linear-gradient(270deg, #A1F1B0 0%, #3B91BF 100%);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+    width: 180px;
+    height: 40px;
+    border-radius: 20px;
+}
+#loginbutton:hover {
+    cursor: pointer;
+}
+/* #loginbox:hover {
+    cursor: pointer;
+} */
+.loginoption {
+    margin: 40px;
+    background: linear-gradient(90deg, #4499BF 0.34%, #106029 142.21%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 500;
+    font-size: xx-large;
+}
+a:hover {
+    background: linear-gradient(270deg, #0c3a14 0%, #3B91BF 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+button {
+    border: none;
+}
