--- a/frontend/src/Components/Emergency/Emergency.css
+++ b/frontend/src/Components/Emergency/Emergency.css
@@ -13,21 +13,21 @@
     margin: 0;
 }
 .logo{
-    background-image: url("./Images/swaaslogo.png");
+    background-image: url("./images/swaaslogo.png");
     background-size: cover;
     height: 75px;
     width: 150px;
     margin-left: 1rem ;
 }
 .profile-photo{
-    background-image: url("./Images/usercircle.png");
+    background-image: url("./images/usercircle.png");
     background-size: cover;
     height: 80px;
     width: 80px;
     margin-right: 3rem;
 }
 .medicalbookpic{
-    background-image: url("./Images/medicalbookpic.png");
+    background-image: url("./images/medicalbookpic.png");
     background-size: cover;
     width: 556px;
 height: 414px;
@@ -104,7 +104,7 @@ a {
     height: 180px;
     width: 200px;
     /* margin-top: 25px; */
-    background-image: url("./Images/photo.png");
+    background-image: url("./images/photo.png");
     border-radius: 1rem;
     background-size: cover;
 }
