--- a/frontend/src/Components/BillsandInsuarance/BillsandInsuarance.css
+++ b/frontend/src/Components/BillsandInsuarance/BillsandInsuarance.css
@@ -1,3 +1,9 @@
+body{
+    margin: 0;
+    overflow-x: hidden;
+    background-color: #CAF4F4;
+    font-family: 'Montserrat', 'sans-serif';
+}
 
 .header{
     display: flex;
@@ -29,7 +35,7 @@ body {
 }
 #bills {
     display: flex;
-    background: #8BE7E7;
+    background: #CAEFD1;
     height: 550px;
     justify-content: space-evenly;
     margin-top: 80px;
@@ -37,6 +43,8 @@ body {
 #billtext {
     text-align: center;
     margin-top: 120px;
+    width: 60%;
+
 }
 .billimg{
     background-image: url("./Assets/Images/bill.png");
@@ -55,11 +63,12 @@ body {
     background: linear-gradient(270deg, #8FDD9E 0%, #4ABCF8 100%);
     height: 50px;
     width: 170px;
+    color: #307743;
 }
 
 #insurance {
     display: flex;
-    background: #8BE7E7;
+    background: #CAEFD1;
     height: 450px;
    
     justify-content:space-evenly;
@@ -73,6 +82,8 @@ body {
 }
 #insurancetext {
     margin-top: 120px;
+    width: 60%;
+
 }
 h1 {
     color: #0D6869;
