--- a/frontend/src/Components/HomePage/HomePage.css
+++ b/frontend/src/Components/HomePage/HomePage.css
@@ -4,7 +4,52 @@
     padding:0;
     font-family:'Encode Sans Expanded',sans-serif;
 }
+.headerHome{
+    height: 80px;
+    width: 100vw;
+    margin:0;
+    background-color: #DFF8F8;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    display: flex;
+    justify-content: space-between;
+}
+.logo{
+    background-image: url("./Assets/Images/logo.png");
+    background-size: cover;
+    height: 70px;
+    width:150px;
+}
+.nav-bar{
+    /* height: 140px; */
+    width: 60vw;
+    text-align: center;
+    margin-top: -5rem;
+    display: flex;
+    flex-direction: row;
+}
+.navbar-elements{
+    position: relative;
+    top: 92px;
+    text-decoration: none;
+    color: #0D6869;
+    
 
+    margin-left: 5rem;
+    font-size: 1.3rem;
+    padding: 4px;
+  
+}
+
+.photoHome{
+    /* margin-top: 8px; */
+    height: 80px;
+    width: 80px;
+    background-image: url("./Assets/Images/profile-photo.png");
+    background-size: cover;
+    margin-left: 8rem;
+    margin-right: 2rem;
+}
 
 body{
     background-color: #CAF4F4;
@@ -190,19 +235,24 @@ justify-content: center;
  font-size: 3rem;
  font-weight: bold;
  margin-top: 100px;
+ color:#0D6869;
 }
 .contactus{
     height: 300px;
     width:100vw;
     border-top-right-radius: 2rem;
     border-top-left-radius: 2rem;
-    background:linear-gradient(to top,#4998A0,#C9EFD1);
+    color:linear-gradient(to top,#4998A0,#C9EFD1);
     
 }
+.contactus
+:hover{
+color: linear-gradient(270deg, #12ec33 0%, #0688ce 100%);} 
+
 
 .logonew{
     position: relative;
-    top: 100px;
+    top: 90px;
     margin-left: 35rem;
 
     background-size: cover;
@@ -212,9 +262,10 @@ justify-content: center;
 }
 .contactus p{
     position: relative;
+color:beige;
+font-size: 1.5rem;
+    top: 90px;
 
-    top: 100px;
-
-    margin-left: 37rem;
+    margin-left: 41rem;
 
 }
