--- a/frontend/src/Components/MentalHealth/MentalHealth.css
+++ b/frontend/src/Components/MentalHealth/MentalHealth.css
@@ -102,7 +102,7 @@ text-align: center;
     align-items: center;
     margin-left: 19%;
 }
-.photo2{
+.photo2Mental{
     background-image: url("./Assets/Images/photo2.jpeg");
     background-size: cover;
     height: 300px;
