--- a/frontend/src/Components/Doctors/Doctors.css
+++ b/frontend/src/Components/Doctors/Doctors.css
@@ -15,14 +15,18 @@ body{
     margin: 0;
 }
 .logo{
-    background-image: url("./Assests/Images/logo.png");
+    /* background-image: url("./Assests/Images/logo.png"); */
+    background-image: url("../SwaasIcons/logo.png");
+
     background-size: cover;
     height: 80px;
     width: 160px;
     margin-left: 1rem ;
 }
 .profile-photo{
-    background-image: url("./Assests/Images/profile-photo.png");
+    /* background-image: url("./Assests/Images/profile-photo.png"); */
+    background-image: url("../SwaasIcons/profile-photo.png");
+
     background-size: cover;
     height: 80px;
     width: 80px;
@@ -52,7 +56,9 @@ body{
     height: 200px;
     width: 200px;
     margin-top: 25px;
-    background-image: url("./Assests/Images/photo.png");
+    /* background-image: url("./Assests/Images/photo.png"); */
+    background-image: url("../SwaasIcons/photo.png");
+
     border-radius: 1rem;
     background-size: cover;
 }
