--- a/frontend/src/Components/BillsandInsuarance/BillsandInsuarance.css
+++ b/frontend/src/Components/BillsandInsuarance/BillsandInsuarance.css
@@ -16,14 +16,18 @@ body{
     margin: 0;
 }
 .logo{
-    background-image: url("./Assets/Images/swaaslogo.png");
+    /* background-image: url("./Assets/Images/swaaslogo.png"); */
+    background-image: url("../SwaasIcons/logo.png");
+
     background-size: cover;
     height: 75px;
     width: 150px;
     margin-left: 1rem ;
 }
 .profile-photo{
-    background-image: url("./Assets/Images/usercircle.png");
+    /* background-image: url("./Assets/Images/usercircle.png"); */
+    background-image: url("../SwaasIcons/profile-photo.png");
+
     background-size: cover;
     height: 80px;
     width: 80px;
@@ -47,13 +51,17 @@ body {
 
 }
 .billimg{
-    background-image: url("./Assets/Images/bill.png");
+    /* background-image: url("./Assets/Images/bill.png"); */
+    background-image: url("../SwaasIcons/bill.png");
+
     background-size: cover;
     width: 689px;
     height: 600px;
 }
 .insuranceimg{
-    background-image: url("./Assets/Images/insurance.png");
+    /* background-image: url("./Assets/Images/insurance.png"); */
+    background-image: url("../SwaasIcons/insurance.png");
+
     background-size: cover;
     width: 400px;
     height: 390px;
