--- a/frontend/src/Components/Medicine-New/MedicineNew.css
+++ b/frontend/src/Components/Medicine-New/MedicineNew.css
@@ -18,14 +18,18 @@ header{
     margin-left: 2.5rem;
 }
 .logo{
-    background-image: url("./Images/logo.png");
+    /* background-image: url("./Images/logo.png"); */
+    background-image: url("../SwaasIcons/logo.png");
+
     background-size: cover;
     height: 80px;
     width: 160px;
     margin-left: 1rem ;
 }
 .profile-photo{
-    background-image: url("./Images/profile-photo.png");
+    /* background-image: url("./Images/profile-photo.png"); */
+    background-image: url("../SwaasIcons/profile-photo.png");
+
     background-size: cover;
     height: 80px;
     width: 80px;
