--- a/frontend/src/Components/Profile/Profile.css
+++ b/frontend/src/Components/Profile/Profile.css
@@ -15,7 +15,9 @@ body{
   margin: 0;
 }
 .logo{
-  background-image: url("./Assests/Images/logo.png");
+  /* background-image: url("./Assests/Images/logo.png"); */
+  background-image: url("../SwaasIcons/logo.png");
+
   background-size: cover;
   height: 75px;
   width: 150px;
@@ -93,7 +95,9 @@ body{
 
 /* ------------------------------------> */
 .profile-photo{
-  background-image: url("./Assests/Images/profile-photo.png");
+  /* background-image: url("./Assests/Images/profile-photo.png"); */
+  background-image: url("../SwaasIcons/profile-photo.png");
+
   background-size: cover;
   height: 80px;
   width: 80px;
