--- a/frontend/src/Components/ProfileLogo/PLogo.css
+++ b/frontend/src/Components/ProfileLogo/PLogo.css
@@ -1,5 +1,7 @@
 .profile-photo{
-    background-image: url("./usercircle.png");
+    /* background-image: url("./usercircle.png"); */
+    background-image: url("../SwaasIcons/usercircle.png");
+
     background-size: cover;
     height: 80px;
     width: 80px;
