responsiveness added to some pages

--- a/frontend/src/Components/ProfileLogo/PLogo.css
+++ b/frontend/src/Components/ProfileLogo/PLogo.css
@@ -6,4 +6,17 @@
     height: 80px;
     width: 80px;
     margin-right: 3rem;
+    @media screen and (max-width:480px) {
+        position: relative;
+        right: -3rem;
+        height: 4rem;
+        width: 4rem;
+        top: 0.5rem;        
+    }
+    @media screen and (max-width:480px)  {
+        .profdiv{
+height:5rem;
+        }
+    }
+    
 }
