--- a/frontend/src/Components/HomePage/HomePage.css
+++ b/frontend/src/Components/HomePage/HomePage.css
@@ -3,6 +3,7 @@
     margin:0;
     padding:0;
     font-family:'Encode Sans Expanded',sans-serif;
+
 }
 .headerHome{
     height: 80px;
@@ -20,27 +21,7 @@
     height:3rem;
     width:3rem;
     display: none;
-}
-@media screen and (max-width:480px) {
-    .dropdown{
-        display: block;
-    }
-    .navbar-elements{
-        display: none;
-    }
-    .nav-bar{
-        display: none;
-        width:0;
-    }
-    
-}
-.logo{
-    /* background-image: url("./Assets/Images/logo.png"); */
-    background-image: url("../SwaasIcons/logo.png");
-
-    background-size: cover;
-    height: 70px;
-    width:150px;
+    cursor: pointer;
 }
 .nav-bar{
     /* height: 140px; */
@@ -63,17 +44,6 @@
   
 }
 
-.photoHome{
-    /* margin-top: 8px; */
-    height: 80px;
-    width: 80px;
-    /* background-image: url("./Assets/Images/profile-photo.png"); */
-    background-image: url("../SwaasIcons/profile-photo.png");
-
-    background-size: cover;
-    margin-left: 8rem;
-    margin-right: 2rem;
-}
 
 body{
     background-color: #CAF4F4;
@@ -139,6 +109,17 @@ font-weight: 300;
 line-height: normal;
 }
 #toknow{
+    margin:0 9rem 0 ;
+    border: 1px solid black;
+    height: 4rem;
+    width: 15rem;
+    text-align: center;
+    border-radius: 1rem;
+    background:linear-gradient(to left,#99E5A2,#41D8DD);
+    color:#0D6869;
+    font-size: 1.8rem;
+}
+#toknow2{
     margin:0 9rem 0 ;
     border: 1px solid black;
     height: 4rem;
@@ -310,4 +291,143 @@ font-size: 1.5rem;
 
     margin-left: 41rem;
 
+}
+@media screen and (max-width:480px) {
+    .dropdown{
+        display: block;
+        position: relative;
+        top:1rem;
+    }
+    .headerHome{
+        position: relative;
+    }
+    
+    .nav-bar{
+        width: 100%;
+        height: 100vh;
+        background: #DFF8F8;
+        position: absolute;
+        top: 2rem;
+        left: 0;
+    z-index: 99;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    
+        /* to get the tranisition  */
+        transform: translateX(100%);
+        transition: all 0.5s linear;
+    
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none; }
+
+    .navbar-elements{
+        flex-direction: column;
+        align-items: center;
+        color :black
+    
+    }
+    .active .nav-bar {
+        transform: translateX(0);
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+      }
+      .active .dropdown {
+        display: block;
+      }
+      .msg{
+        font-size: 1.5rem;
+
+      }
+      .text-infoHome p{
+        display:none;
+      }
+      #toknow{
+        height:3rem;
+        width:11rem;
+        margin-top: 1rem;
+        font-size: 1.4rem;
+        margin-left: 8rem;
+      }
+      #toknow2{
+        height:3rem;
+        width:11rem;
+        margin-top: 1rem;
+        font-size: 1.4rem;
+        margin-left: 4.5rem;
+      }
+      .infoHome{
+        left:0;
+        width:100vw;
+        height:22rem;
+      }
+      .image-info1{
+        position: absolute;
+  height: 10rem;
+  width: 10rem;
+  top: 11rem;
+      }
+      .communicationHome{
+        display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  height:60vh;
+  margin:1rem;
+  left:0;
+  width:100%;
+      }
+      .img-com1{
+        height:9rem;
+        width:10rem;
+      }
+      .commHome1{
+        height:15rem;
+        width:10rem;
+      }
+      .info-comHome a{
+        font-size: 1rem;
+      }
+      .img-com2,.img-com3,.img-com4{
+        height:10rem;
+        width:10rem;
+      }
+      .image-info2{
+        position: absolute;
+        height:12rem;
+        width:15rem;
+        top:7rem;
+      }
+      .infoHome2{
+        height:34vh
+      }
+      .image-info4{
+        position:absolute;
+        height:12rem;
+        width:15rem;
+        top:7rem;
+      }
+      .image-info3{
+        position:absolute;
+        height:10rem;
+        top:9rem;
+        width:8.5rem;
+      }
+      *{
+        overflow-x: hidden;
+      
+    }
+    .text-infoHome{
+        height:25vh;
+    }
+    .blank{
+        margin-top:3rem;
+        margin-left:2.5rem;
+        margin-right: 2rem;
+        margin-bottom: 3rem;;
+    }
+    .review{
+        margin-top:0rem;
+    }
 }
