--- a/frontend/src/Components/AboutUS/About.css
+++ b/frontend/src/Components/AboutUS/About.css
@@ -128,3 +128,88 @@ height: 260px;
     border-top-right-radius: 1rem;
     border-top-left-radius: 1rem;
 }
+.dropdown{
+    background-image: url("../SwaasIcons/icons8-list-48.png");
+    height:3rem;
+    width:3rem;
+    display: none;
+    cursor: pointer;
+}
+.nav-barAbout{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+
+}
+.navbar-elementsAbout{
+    margin-left: 2.5rem;
+}
+@media screen and (max-width:900px) {
+    .dropdown{
+        display: block;
+        position: relative;
+        top:1rem;
+    }
+    .nav-barAbout{
+        display: none;
+    }
+    #mission{
+        margin-top: 2rem;
+  width: 100%;
+  height: fit-content;
+  display: block;
+    }
+    #missiontext{
+        margin:0;
+        text-align: center;
+    }
+    .mottopic{
+        position: relative;
+  height: 10rem;
+  width: 23rem;
+  /* left: 1rem; */
+  margin: 0 auto;
+    }
+    #aboutus{
+        display: block;
+  width: 100%;
+  height:fit-content;
+    }
+    .aboutpic{
+        position: relative;
+        height:15rem;
+        width:20rem;
+        margin:  0 auto;
+    }
+    #abouttext{
+        margin: 0;
+        text-align: center;
+    }
+    #founding{
+        margin-top: 3rem;
+        display: block;
+        height: fit-content;
+    }
+    #foundingtext{
+        text-align: center;
+        margin:0;
+    }
+    .foundingpic{
+        position: relative;
+        height: 18rem;
+        width: 20rem;
+        /* left: 4rem; */
+        margin: 0 auto;
+    }
+    #founders{
+        margin-top: 5rem;
+    }
+    #founderpics{
+        display: block;
+        text-align: center;
+    }
+
+
+    
+}
