--- a/frontend/src/Components/Emergency/Emergency.css
+++ b/frontend/src/Components/Emergency/Emergency.css
@@ -86,6 +86,9 @@ a {
     margin-top: 40px;
     border-radius: 1rem;
 }
+#bookmedical{
+    margin-left: 10rem;
+}
 .photoDocEmer{
     height: 180px;
     width: 200px;
@@ -102,4 +105,45 @@ footer {
     height: 145px;
     border-radius: 40px;
     background: linear-gradient(0deg, #45969F 0%, #CAEFD1 135.22%);
+}
+@media screen and (max-width:900px) {
+    #medicalbook{
+        display: block;
+        height: fit-content;
+    }
+    #medicalbook p{
+        font-size: 1.1rem;
+        text-align: center;
+    }
+    #bookmedical{
+        height:2.5rem;
+        width: 10rem;
+        margin: 0;
+    }
+    .medicalbookpic{
+         
+            position: relative;
+            height: 12rem;
+            width: 15rem;
+margin:  0 auto;    }
+    #hospitalnear{
+        margin-top: 2rem;
+    }
+    #hospitallocdiv{
+        margin-top: 0.75rem;
+    }
+    .hospitaldetail{
+        height:11rem;
+        width: 100%;
+        margin-left: 0;
+    }
+    .photoDocEmer{
+        height:8rem;
+        width: 12rem;
+        margin-right: 1rem;
+    }
+    .hospitaldetail button{
+        height: 2rem;
+        width:8rem;
+    }
 }
