--- a/frontend/src/Components/HomePage/HomePage.css
+++ b/frontend/src/Components/HomePage/HomePage.css
@@ -292,7 +292,73 @@ font-size: 1.5rem;
     margin-left: 41rem;
 
 }
-@media screen and (max-width:480px) {
+@media screen and (min-width:780px ) and (max-width:900px) {
+    .communicationHome{
+        display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  height:fit-content;
+  margin-top:1rem ;
+  margin: 1rem auto;
+  left:0;
+  width:100%;
+      }
+      .commHome1{
+        height:15rem;
+        width:10rem;
+        margin-left: 1rem;
+      }
+}
+@media screen and (min-width:588px) and (max-width:780px) {
+    .communicationHome{
+        display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  height:fit-content;
+  margin-top:1rem ;
+  margin: 1rem auto;
+  left:0;
+  width:100%;
+      }
+      .commHome1{
+        height:15rem;
+        width:10rem;
+        margin-left: 1rem;
+      }}
+      @media screen and (min-width:377px) and (max-width:588px) {
+        .communicationHome{
+            display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 10px;
+      height:fit-content;
+      margin-top:1rem ;
+      margin: 1rem auto;
+      left:0;
+      width:100%;
+          }
+          .commHome1{
+            height:15rem;
+            width:10rem;
+            margin: 0 auto;
+          }}
+          @media screen  and (max-width:377px) {
+            .communicationHome{
+                display: grid;
+          grid-template-columns: repeat(1, 1fr);
+          gap: 10px;
+          height:fit-content;
+          margin-top:1rem ;
+          margin: 1rem auto;
+          left:0;
+          width:100%;
+              }
+              .commHome1{
+                height:15rem;
+                width:10rem;
+margin: 0 auto;              }}
+        
+
+@media screen and (max-width:900px) {
     .dropdown{
         display: block;
         position: relative;
@@ -337,9 +403,19 @@ font-size: 1.5rem;
       .active .dropdown {
         display: block;
       }
+      .Adi{
+        display: flex;
+  justify-content: center;
+      }
       .msg{
         font-size: 1.5rem;
+        margin: 1rem 1.4rem;
 
+
+      }
+      .text-infoHome{
+        width:100%;
+        height: fit-content;
       }
       .text-infoHome p{
         display:none;
@@ -350,6 +426,7 @@ font-size: 1.5rem;
         margin-top: 1rem;
         font-size: 1.4rem;
         margin-left: 8rem;
+        margin: 0;
       }
       #toknow2{
         height:3rem;
@@ -357,35 +434,36 @@ font-size: 1.5rem;
         margin-top: 1rem;
         font-size: 1.4rem;
         margin-left: 4.5rem;
+        margin: 0;
       }
       .infoHome{
         left:0;
         width:100vw;
-        height:22rem;
+        display: block;
+        height:fit-content;
       }
       .image-info1{
-        position: absolute;
+        position: relative;
   height: 10rem;
   width: 10rem;
-  top: 11rem;
+  margin: 0 auto;
+  /* top: 11rem; */
       }
-      .communicationHome{
+      /* .communicationHome{
         display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 10px;
   height:60vh;
-  margin:1rem;
+  margin-top:1rem ;
+  margin: 1rem auto;
   left:0;
   width:100%;
-      }
+      } */
       .img-com1{
         height:9rem;
         width:10rem;
       }
-      .commHome1{
-        height:15rem;
-        width:10rem;
-      }
+      
       .info-comHome a{
         font-size: 1rem;
       }
@@ -419,7 +497,7 @@ font-size: 1.5rem;
       
     }
     .text-infoHome{
-        height:25vh;
+        height:fit-content;
     }
     .blank{
         margin-top:3rem;
@@ -430,4 +508,5 @@ font-size: 1.5rem;
     .review{
         margin-top:0rem;
     }
+    
 }
